fix alignment of buttons

--- a/public/css/secret.css
+++ b/public/css/secret.css
@@ -408,7 +408,7 @@ input#cw {
 
 .content .tools { flex-grow: 1; }
 .content .tools div { display: inline-block; }
-.content .tools button { font-size: 1rem; background: none; border: none; }
+.content .tools button { font-size: 1rem; background: none; border: none; padding: 0; margin-right: 0.5rem; }
 .content .tools button.active { background: var(--highlight); }
 .content .tools button .active { display: none; }
 .content .tools button.active .active { display: block; }
